# gst-plugins-bad

./: .gitignore  configure.ac
ext/: Makefile.am
ext/speakertrack/: Makefile.am  gstcamcontrol.c  gstcamcontrol.h  gstcamcontrol_canon.c  gstcamcontrol_canon.h  gstcamcontrol_pana.c  gstcamcontrol_pana.h  gstcamcontrol_sony.c  gstcamcontrol_sony.h  gstcamcontrol_visca.c  gstcamcontrol_visca.h  gstcamcontrol_visca_sony.c  gstcamcontrol_visca_sony.h  gstfacedetect.c  gstfacedetect.h  gstfacedetect2.c  gstfacedetect2.h  gstptzcontrol_gtk.c  gstspeakertrack.c  gstspeakertrack.h  ptz.c  ptz_.c  test_ptz.c
ext/speakertrack/visca_sony/: AUTHORS  BUGS  cameraimp.h  comm.cpp  commands.cpp  commands.h  connectionimp.h  init.cpp  visca.h  viscacamera.cpp  viscaconnection.cpp
gst-libs/gst/: Makefile.am
gst/mxf/: mxfdemux.c
gst/tcpfunnel/: Makefile.am  gsttcpfunnelsrc.c  gsttcpfunnelsrc.h
tests/examples/: Makefile.am
tests/examples/opencv/: Makefile.am  gstfacerec_test.c
tests/examples/speakertrack/: Makefile.am  gstspeakertrack_test.c  run.sh
tools/: Makefile.am
tools/gst-switch/: .gitignore  Makefile.am  gstswitchsrv.c  gstswitchui.c
