plugin_LTLIBRARIES = libgsttcpfunnel.la

libgsttcpfunnel_la_SOURCES = gsttcpfunnelsrc.c
libgsttcpfunnel_la_CFLAGS = $(GST_CFLAGS) $(GIO_CFLAGS)
libgsttcpfunnel_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgsttcpfunnel_la_LIBADD = $(GST_BASE_LIBS) $(GST_LIBS) $(GIO_LIBS)
libgsttcpfunnel_la_LIBTOOLFLAGS = --tag=disable-static
